--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -79,6 +79,20 @@ body {
     }
   }
 
+  .docourses {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: silver;
+    width: rem(30px);
+    height: rem(30px);
+    cursor: pointer;
+    margin: 0;
+    @include media(">=sm") {
+      margin: 0 rem(20px) 0 0;
+    }
+  }
+
   .icon-search {
     width: rem(20px);
     height: rem(20px);
