--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,24 @@
             {% endif %}
         </a>
     </h1>
+    <a id="courses" class="docourses" role="button">
+        
+    </a>
+    <a id="courses" class="docourses" role="button">
+        
+    </a>
+    <a id="courses" class="docourses" role="button" href="/category/courses/">
+        Courses
+    </a>
+    <a id="courses" class="docourses" role="button" href="/category/interview-questions/">
+        Interview Questions
+    </a>
+    <a id="courses" class="docourses" role="button" href="/category/quiz/">
+        Quiz
+    </a>
+    <a id="courses" class="docourses" role="button" href="/apps">
+        Apps Hub
+    </a>
     <a id="search" class="dosearch" role="button">
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
