--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,8 @@ $texts: map-get($theme, texts) !default;
 
 // Breakpoints
 $breakpoints: (
-  sm: 37.5rem
+  sm: 37.5rem,
+  md: 56.5rem
 );
 
 // Margins
