renamed from interview questions to interviews

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
         Courses
     </a>
     <a id="courses" class="docourses" role="button" href="/category/interview-questions/">
-        Interview Questions
+        Interviews
     </a>
     <a id="courses" class="docourses" role="button" href="/category/quiz/">
         Quiz
