updated menu and footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,12 @@
     <a id="courses" class="docourses" role="button" href="/apps">
         Apps Hub
     </a>
+    <a id="courses" class="docourses" role="button" href="/contact">
+        Contact Me
+    </a>
+    <a id="courses" class="docourses about-me" role="button" href="/about">
+        About Me
+    </a>
     <a id="search" class="dosearch" role="button">
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
