added branding logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <a id="courses" class="docourses" role="button">
         
     </a>
-    <a id="courses" class="docourses" role="button" href="/category/courses/">
+    <a id="courses" class="docourses" role="button" href="/courses/">
         Courses
     </a>
     <a id="courses" class="docourses" role="button" href="/category/interview-questions/">
